changed my title and other info

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - CS Portfolio</title>
+    <title>GuruSudhanva - CS Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -39,7 +39,7 @@
         <h2 class="section-title">About Me</h2>
         <div class="about-content">
             <div class="about-text">
-    <p>Enthusiastic software developer with a strong foundation in OOP and hands-on experience in Python, C++, and Java. Skilled in front-end technologies (HTML, CSS, JavaScript) and SQL, with experience in building interactive web applications and IoT-based solutions. Solved 170+ LeetCode problems, showcasing strong problem-solving and algorithmic skills. Passionate about Generative AI, continuous learning, and developing robust, scalable software solutions.</p>
+    <p>Enthusiastic software developer with a strong foundation in OOP and hands-on experience in Python, C++, and Java. Skilled in front-end technologies (HTML, CSS, JavaScript) and SQL, with experience in building interactive web applications and IoT-based solutions. Solved 200+ LeetCode problems, showcasing strong problem-solving and algorithmic skills. Passionate about Generative AI, continuous learning, and developing robust, scalable software solutions.</p>
 
     <p>When I'm not coding, you can find me exploring new technologies, contributing to open-source projects, or working on personal coding challenges to continuously improve my skills.</p>
 </div>
